<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手机时间管理</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sleep">睡眠</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="rest">休息</string>
    <string name="rest_interval_time">间隔时长</string>
    <string name="rest_time">休息时长</string>
    <string name="set">设置</string>
    <string name="restset_null_note">请将设置信息填写完整!</string>
    <string name="restset_zero_note">设置不能为0!</string>
    <string name="sleepset_noweek_note">星期不能为空!请选择星期并点击设置键设置提醒</string>
    <string name="sleep_set_successful">睡眠模式设置成功</string>
    <string name="rest_set_successful">休息模式设置成功</string>
</resources>
